fixed dark mode; better styles

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,7 +23,7 @@
 }
 
 body {
-  @apply bg-white dark:bg-black text-black dark:text-white;
+  @apply bg-black text-white;
 }
 
 hr {
